# ML_Homework

./: .gitignore  README.md  download_data.py  load_data.py  main.py  pyproject.toml  transform_data.py  机器学习作业1.docx  机器学习作业2.docx
checkpoint/daily-climate-time-series-data/: GRU_best.pth  GRU_metrics.json  LSTM_best.pth  LSTM_metrics.json  RNN_best.pth  RNN_metrics.json  TimeSeriesTransformer_metrics.json
checkpoint/electric-power-consumption/: GRU_best.pth  GRU_metrics.json  LSTM_best.pth  LSTM_metrics.json  RNN_best.pth  RNN_metrics.json  TimeSeriesTransformer_metrics.json
checkpoint/time-series-forecasting-with-yahoo-stock-price/: GRU_best.pth  GRU_metrics.json  LSTM_best.pth  LSTM_metrics.json  RNN_best.pth  RNN_metrics.json  TimeSeriesTransformer_metrics.json
data/kaggle_data/: meta_data.json5  meta_data.jsonc
data/processed_data/daily-climate-time-series-data/: meta.json5  meta_data.jsonc  scaler.joblib  test.csv  train.csv  train_conf.json5
data/processed_data/electric-power-consumption/: meta.json5  meta_data.jsonc  scaler.joblib  test.csv  train.csv  train_conf.json5
data/processed_data/time-series-forecasting-with-yahoo-stock-price/: meta.json5  scaler.joblib  test.csv  train.csv  train_conf.json5
doc/: data_preprocess.md  dataset.md  model.md
src/: data_vis.py  train_model.py  utils.py
src/data/: download_data.py  load_data.py  transform_data.py
src/model/: RNN.py  Transformer.py  __init__.py
