[project]
name = "ml-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.25.2",
    "pandas>=2.2.1",
    "scikit-learn>=1.3.2",
    "matplotlib>=3.8.0",
    "kagglehub>=0.3.13",
    "transformers>=4.57.3",
    "json5>=0.12.1",
]
[project.optional-dependencies]
cpu = [
  "torch>=2.1.0",
  "torchvision>=0.20.0",
]
cu121 = [
  "torch>=2.1.0",
  "torchvision>=0.20.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu121" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu121", extra = "cu121" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu121", extra = "cu121" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
